# smart-farming-ai-agent

./: .env.example  .gitignore  README.md  package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: chat.rs  mod.rs  translate.rs
backend/src/rag/: generator.rs  knowledge_base.rs  mod.rs  retriever.rs
backend/src/services/: ibm_cloud.rs  ibm_granite.rs  mod.rs  translator.rs
backend/src/utils/: logger.rs
docs/: architecture.md
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: LanguageSelector.tsx
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatBox.tsx  CropPlanner.tsx  DashboardLayout.tsx  GovernmentSchemes.tsx  LanguageSelector.tsx  MarketTrends.tsx
frontend/src/i18n/: en.json  hi.json  index.ts  mr.json
frontend/src/lib/: api.ts
