[package]
name = "smart-farming-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
