[package]
name = "smart-farming-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for IBM Cloud
reqwest = { version = "0.11", features = ["json"] }

# Environment & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# For simple text similarity (TF-IDF like)
unicode-segmentation = "1.10"

# For translation dictionary
lazy_static = "1.4"
regex = "1.10"
